tools/function-summary/bindgen_20210704.rs

extern "C" {
    #[doc = " Refresh the physical screen to match what was last rendered (i.e., without"]
    #[doc = " reflecting any changes since the last call to notcurses_render()). This is"]
    #[doc = " primarily useful if the screen is externally corrupted, or if an"]
    #[doc = " NCKEY_RESIZE event has been read and you're not yet ready to render. The"]
    #[doc = " current screen geometry is returned in 'y' and 'x', if they are not NULL."]
    pub fn notcurses_refresh(
        n: *mut notcurses,
        y: *mut cty::c_int,
        x: *mut cty::c_int,
    ) -> cty::c_int;
}
extern "C" {
    #[doc = " Extract the Notcurses context to which this plane is attached."]
    pub fn ncplane_notcurses(n: *const ncplane) -> *mut notcurses;
}
extern "C" {
    pub fn ncplane_notcurses_const(n: *const ncplane) -> *const notcurses;
}
extern "C" {
    #[doc = " Return the dimensions of this ncplane."]
    pub fn ncplane_dim_yx(n: *const ncplane, y: *mut cty::c_int, x: *mut cty::c_int);
}
extern "C" {
    #[doc = " Get a reference to the standard plane (one matching our current idea of the"]
    #[doc = " terminal size) for this terminal. The standard plane always exists, and its"]
    #[doc = " origin is always at the uppermost, leftmost cell of the terminal."]
    pub fn notcurses_stdplane(nc: *mut notcurses) -> *mut ncplane;
}
extern "C" {
    pub fn notcurses_stdplane_const(nc: *const notcurses) -> *const ncplane;
}
extern "C" {
    #[doc = " Retrieve pixel geometry for the display region ('pxy', 'pxx'), each cell"]
    #[doc = " ('celldimy', 'celldimx'), and the maximum displayable bitmap ('maxbmapy',"]
    #[doc = " 'maxbmapx'). If bitmaps are not supported, 'maxbmapy' and 'maxbmapx' will"]
    #[doc = " be 0. Any of the geometry arguments may be NULL."]
    pub fn ncplane_pixelgeom(
        n: *const ncplane,
        pxy: *mut cty::c_int,
        pxx: *mut cty::c_int,
        celldimy: *mut cty::c_int,
        celldimx: *mut cty::c_int,
        maxbmapy: *mut cty::c_int,
        maxbmapx: *mut cty::c_int,
    );
}
extern "C" {
    #[doc = " Retrieve the contents of the specified cell as last rendered. Returns the EGC"]
    #[doc = " or NULL on error. This EGC must be free()d by the caller. The stylemask and"]
    #[doc = " channels are written to 'stylemask' and 'channels', respectively."]
    pub fn notcurses_at_yx(
        nc: *mut notcurses,
        yoff: cty::c_int,
        xoff: cty::c_int,
        stylemask: *mut u16,
        channels: *mut u64,
    ) -> *mut cty::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct ncplane_options {
    #[doc = " vertical placement relative to parent plane"]
    pub y: cty::c_int,
    #[doc = " horizontal placement relative to parent plane"]
    pub x: cty::c_int,
    #[doc = " rows, must be positive (unless NCPLANE_OPTION_MARGINALIZED)"]
    pub rows: cty::c_int,
    #[doc = " columns, must be positive (unless NCPLANE_OPTION_MARGINALIZED)"]
    pub cols: cty::c_int,
    #[doc = " user curry, may be NULL"]
    pub userptr: *mut cty::c_void,
    #[doc = " name (used only for debugging), may be NULL"]
    pub name: *const cty::c_char,
    #[doc = " callback when parent is resized"]
    pub resizecb: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ncplane) -> cty::c_int>,
    #[doc = " closure over NCPLANE_OPTION_*"]
    pub flags: u64,
    #[doc = " margins (require NCPLANE_OPTION_MARGINALIZED)"]
    pub margin_b: cty::c_int,
    #[doc = " margins (require NCPLANE_OPTION_MARGINALIZED)"]
    pub margin_r: cty::c_int,
}
#[test]
fn bindgen_test_layout_ncplane_options() {
    assert_eq!(
        ::core::mem::size_of::<ncplane_options>(),
        56usize,
        concat!("Size of: ", stringify!(ncplane_options))
    );
    assert_eq!(
        ::core::mem::align_of::<ncplane_options>(),
        8usize,
        concat!("Alignment of ", stringify!(ncplane_options))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).y as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).x as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).rows as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(rows)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).cols as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(cols)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).userptr as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(userptr)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).name as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).resizecb as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(resizecb)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).flags as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).margin_b as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(margin_b)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncplane_options>())).margin_r as *const _ as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(ncplane_options),
            "::",
            stringify!(margin_r)
        )
    );
}
impl Default for ncplane_options {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
extern "C" {
    #[doc = " Create a new ncplane bound to plane 'n', at the offset 'y'x'x' (relative to"]
    #[doc = " the origin of 'n') and the specified size. The number of 'rows' and 'cols'"]
    #[doc = " must both be positive. This plane is initially at the top of the z-buffer,"]
    #[doc = " as if ncplane_move_top() had been called on it. The void* 'userptr' can be"]
    #[doc = " retrieved (and reset) later. A 'name' can be set, used in debugging."]
    pub fn ncplane_create(n: *mut ncplane, nopts: *const ncplane_options) -> *mut ncplane;
}
extern "C" {
    #[doc = " Same as ncplane_create(), but creates a new pile. The returned plane will"]
    #[doc = " be the top, bottom, and root of this new pile."]
    pub fn ncpile_create(nc: *mut notcurses, nopts: *const ncplane_options) -> *mut ncplane;
}
extern "C" {
    #[doc = " Suitable for use as a 'resizecb', this will resize the plane to the visual"]
    #[doc = " region's size. It is used for the standard plane."]
    pub fn ncplane_resize_maximize(n: *mut ncplane) -> cty::c_int;
}
extern "C" {
    #[doc = " Suitable for use as a 'resizecb' with planes created with"]
    #[doc = " NCPLANE_OPTION_MARGINALIZED. This will resize the plane 'n' against its"]
    #[doc = " parent, attempting to enforce the supplied margins."]
    pub fn ncplane_resize_marginalized(n: *mut ncplane) -> cty::c_int;
}
extern "C" {
    #[doc = " Suitable for use as a 'resizecb'. This will realign the plane 'n' against"]
    #[doc = " its parent, using the alignment specified at ncplane_create()-time."]
    pub fn ncplane_resize_realign(n: *mut ncplane) -> cty::c_int;
}
extern "C" {
    #[doc = " Replace the ncplane's existing resizecb with 'resizecb' (which may be NULL)."]
    #[doc = " The standard plane's resizecb may not be changed."]
    pub fn ncplane_set_resizecb(
        n: *mut ncplane,
        resizecb: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ncplane) -> cty::c_int>,
    );
}
extern "C" {
    #[doc = " Returns the ncplane's current resize callback."]
    pub fn ncplane_resizecb(
        n: *const ncplane,
    ) -> ::core::option::Option<unsafe extern "C" fn(n: *mut ncplane) -> cty::c_int>;
}
extern "C" {
    #[doc = " Plane 'n' will be unbound from its parent plane, and will be made a bound"]
    #[doc = " child of 'newparent'. It is an error if 'n' or 'newparent' are NULL. If"]
    #[doc = " 'newparent' is equal to 'n', 'n' becomes the root of a new pile, unless 'n'"]
    #[doc = " is already the root of a pile, in which case this is a no-op. Returns 'n'."]
    #[doc = " The standard plane cannot be reparented. Any planes bound to 'n' are"]
    #[doc = " reparented to the previous parent of 'n'."]
    pub fn ncplane_reparent(n: *mut ncplane, newparent: *mut ncplane) -> *mut ncplane;
}
extern "C" {
    #[doc = " The same as ncplane_reparent(), except any planes bound to 'n' come along"]
    #[doc = " with it to its new destination. Their z-order is maintained. If 'newparent'"]
    #[doc = " is an ancestor of 'n', NULL is returned, and no changes are made."]
    pub fn ncplane_reparent_family(n: *mut ncplane, newparent: *mut ncplane) -> *mut ncplane;
}
extern "C" {
    #[doc = " Duplicate an existing ncplane. The new plane will have the same geometry,"]
    #[doc = " will duplicate all content, and will start with the same rendering state."]
    #[doc = " The new plane will be immediately above the old one on the z axis, and will"]
    #[doc = " be bound to the same parent. Bound planes are *not* duplicated; the new"]
    #[doc = " plane is bound to the parent of 'n', but has no bound planes."]
    pub fn ncplane_dup(n: *const ncplane, opaque: *mut cty::c_void) -> *mut ncplane;
}
extern "C" {
    #[doc = " provided a coordinate relative to the origin of 'src', map it to the same"]
    #[doc = " absolute coordinate relative to the origin of 'dst'. either or both of 'y'"]
    #[doc = " and 'x' may be NULL. if 'dst' is NULL, it is taken to be the standard plane."]
    pub fn ncplane_translate(
        src: *const ncplane,
        dst: *const ncplane,
        y: *mut cty::c_int,
        x: *mut cty::c_int,
    );
}
extern "C" {
    #[doc = " Fed absolute 'y'/'x' coordinates, determine whether that coordinate is"]
    #[doc = " within the ncplane 'n'. If not, return false. If so, return true. Either"]
    #[doc = " way, translate the absolute coordinates relative to 'n'. If the point is not"]
    #[doc = " within 'n', these coordinates will not be within the dimensions of the plane."]
    pub fn ncplane_translate_abs(n: *const ncplane, y: *mut cty::c_int, x: *mut cty::c_int)
        -> bool;
}
extern "C" {
    #[doc = " All planes are created with scrolling disabled. Scrolling can be dynamically"]
    #[doc = " controlled with ncplane_set_scrolling(). Returns true if scrolling was"]
    #[doc = " previously enabled, or false if it was disabled."]
    pub fn ncplane_set_scrolling(n: *mut ncplane, scrollp: bool) -> bool;
}
extern "C" {
    pub fn ncplane_scrolling_p(n: *const ncplane) -> bool;
}
